--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ coverage==4.1
 python-dateutil==2.5.3
 pytz==2016.7
 pylint==1.6.4
+pylint-django==0.7.2
+pyflakes==1.3.0
 Django==1.10.1
 et3==1.1
 green==2.5.0
