--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ green==2.5.0
 hg+https://bitbucket.org/lskibinski/rfc3339
 ipython==5.1.0
 kids.cache==0.0.4
+psycopg2==2.7.1
 pyflakes==1.3.0
 pylint==1.6.4
 pylint-django==0.7.2
