--- a/elife.cfg
+++ b/elife.cfg
@@ -3,6 +3,7 @@ debug: True
 env: dev
 secret-key: these-are-dev-settings.DO.NOT.USE.IN.PROD.EVER
 allowed-hosts: localhost
+api-url: https://prod--gateway.elifesciences.org
 
 [database]
 name: db.sqlite3
