--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,6 @@ pylint-django==0.7.2
 python-dateutil==2.5.3
 python-json-logger==0.1.5
 pytz==2017.2
+requests==2.13.0
+requests-cache==0.4.13
 uWSGI==2.0.15
