added code to listen to sqs queue

--- a/elife.cfg
+++ b/elife.cfg
@@ -5,6 +5,9 @@ secret-key: these-are-dev-settings.DO.NOT.USE.IN.PROD.EVER
 allowed-hosts: localhost
 api-url: https://prod--gateway.elifesciences.org
 
+[sqs]
+queue-name:
+
 [database]
 name: db.sqlite3
 engine: django.db.backends.sqlite3
