--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,9 @@ psycopg2==2.8.3
 pyflakes==2.0.0
 pylint==2.4.1
 pylint-django==2.0.11
+# pylint-plugin-utils is a dependency for pylint-django, but 
+# pylint-django hasn't bumped it yet to support changes in pylint 2.4
+pylint-plugin-utils==0.6
 python-dateutil==2.7.3
 python-json-logger==0.1.9
 python-slugify==1.2.6
