--- a/src/templates/README.md.template
+++ b/src/templates/README.md.template
@@ -99,7 +99,7 @@ modifying reports.
 
 ## Copyright & Licence
 
-Copyright 2020 eLife Sciences. Licensed under the [GPLv3](LICENCE.txt)
+Copyright {{ copyright_year }} eLife Sciences. Licensed under the [GPLv3](LICENCE.txt)
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
