--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,35 @@
+# file generated 2020-09-22 - see update-dependencies.sh
+astroid==2.4.2
 autopep8==1.4
 backoff==1.6.0
 boto3==1.9.18
+botocore==1.12.253
+certifi==2020.6.20
+chardet==3.0.4
+colorama==0.4.3
 coverage==4.5.1
 Django==1.11.29
 django-annoying==0.10.4
 django-markdown2==0.3.1
+docutils==0.15.2
 et3==1.5.1
 feedgen==0.9.0
 green==2.13.0
+idna==2.7
 ipython-genutils==0.2.0
+isort==4.3.21
+jmespath==0.10.0
 kids.cache==0.0.7
+lazy-object-proxy==1.4.3
+lxml==4.5.2
+markdown2==2.3.9
+mccabe==0.6.1
 newrelic==4.4.1.104
 psycopg2==2.8.3
+pycodestyle==2.6.0
 pyflakes==2.0.0
 pylint==2.4.1
 pylint-django==2.0.11
-# pylint-plugin-utils is a dependency for pylint-django, but 
-# pylint-django hasn't bumped it yet to support changes in pylint 2.4
 pylint-plugin-utils==0.6
 python-dateutil==2.7.3
 python-json-logger==0.1.9
@@ -25,4 +38,11 @@ pytz==2018.5
 requests==2.20.0
 requests-cache==0.4.13
 rfc3339==6.0
+s3transfer==0.1.13
+six==1.15.0
+termstyle==0.1.11
+typed-ast==1.4.1
+Unidecode==1.1.1
+urllib3==1.24.3
 uWSGI==2.0.17.1
+wrapt==1.12.1
