switches tests to pytest

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-# file generated 2020-10-02 - see update-dependencies.sh
+# file generated 2020-10-09 - see update-dependencies.sh
 astroid==2.4.2
+attrs==20.2.0
 autopep8==1.5.4
 backoff==1.10.0
-boto3==1.15.10
-botocore==1.18.10
+boto3==1.15.15
+botocore==1.18.15
 certifi==2020.6.20
 chardet==3.0.4
 coverage==4.5.4
@@ -13,20 +14,29 @@ django-markdown2==0.3.1
 et3==1.5.1
 feedgen==0.9.0
 idna==2.10
-isort==5.5.4
+importlib-metadata==2.0.0
+isort==5.6.1
 jmespath==0.10.0
 kids.cache==0.0.7
 lazy-object-proxy==1.4.3
 lxml==4.5.2
 markdown2==2.3.9
 mccabe==0.6.1
-newrelic==5.20.0.149
+more-itertools==8.5.0
+newrelic==5.20.1.150
+packaging==20.4
+pluggy==0.13.1
 psycopg2==2.8.6
+py==1.9.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
 pylint==2.6.0
 pylint-django==2.3.0
 pylint-plugin-utils==0.6
+pyparsing==2.4.7
+pytest==5.4.3
+pytest-cov==2.10.1
+pytest-django==3.10.0
 python-dateutil==2.8.1
 python-json-logger==0.1.11
 python-slugify==1.2.6
@@ -36,10 +46,12 @@ requests-cache==0.4.13
 rfc3339==6.0
 s3transfer==0.3.3
 six==1.15.0
-sqlparse==0.3.1
+sqlparse==0.4.1
 toml==0.10.1
 typed-ast==1.4.1
 Unidecode==1.1.1
 urllib3==1.25.10
 uWSGI==2.0.19.1
+wcwidth==0.2.5
 wrapt==1.12.1
+zipp==3.3.0
