--- a/Pipfile
+++ b/Pipfile
@@ -32,6 +32,7 @@ pylint = "~=2.4"
 pylint-django = "~=2.0"
 pytest = "~=5.3"
 pytest-cov = "~=2.8"
+pytest-freezegun = "~=0.4"
 pytest-django = "~=3.8"
 # pylint-plugin-utils is a dependency for pylint-django, but 
 # pylint-django hasn't bumped it yet to support changes in pylint 2.4
