--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-# file generated 2020-10-09 - see update-dependencies.sh
+# file generated 2020-10-12 - see update-dependencies.sh
 astroid==2.4.2
 attrs==20.2.0
 autopep8==1.5.4
 backoff==1.10.0
-boto3==1.15.15
-botocore==1.18.15
+boto3==1.15.16
+botocore==1.18.16
 certifi==2020.6.20
 chardet==3.0.4
 coverage==4.5.4
@@ -13,9 +13,10 @@ django-annoying==0.10.6
 django-markdown2==0.3.1
 et3==1.5.1
 feedgen==0.9.0
+freezegun==1.0.0
 idna==2.10
 importlib-metadata==2.0.0
-isort==5.6.1
+isort==5.6.3
 jmespath==0.10.0
 kids.cache==0.0.7
 lazy-object-proxy==1.4.3
@@ -37,6 +38,7 @@ pyparsing==2.4.7
 pytest==5.4.3
 pytest-cov==2.10.1
 pytest-django==3.10.0
+pytest-freezegun==0.4.2
 python-dateutil==2.8.1
 python-json-logger==0.1.11
 python-slugify==1.2.6
