adds support for ga measurement id in feeds

--- a/elife.cfg
+++ b/elife.cfg
@@ -4,6 +4,7 @@ env: dev
 secret-key: these-are-dev-settings.DO.NOT.USE.IN.PROD.EVER
 allowed-hosts: localhost
 api-url: https://prod--gateway.elifesciences.org
+feedly-ga-measurement-id:
 
 [sqs]
 queue-name:
