--- a/Pipfile
+++ b/Pipfile
@@ -30,12 +30,9 @@ uWSGI = "*"
 pyflakes = "~=2.0"
 pylint = "~=2.4"
 pylint-django = "~=2.0"
-pytest = "~=5.3"
-pytest-cov = "~=2.8"
+pytest = "~=6.2"
+pytest-cov = "*"
 pytest-freezegun = "~=0.4"
-pytest-django = "~=3.8"
-# pylint-plugin-utils is a dependency for pylint-django, but 
-# pylint-django hasn't bumped it yet to support changes in pylint 2.4
-pylint-plugin-utils = "~=0.6"
-coverage = "~=4.5"
+pytest-django = "*"
+coverage = "*"
 autopep8 = "~=1.4"
