--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,59 @@
-# file generated 2021-01-08 - see update-dependencies.sh
+# file generated 2021-02-19 - see update-dependencies.sh
 astroid==2.4.2
 attrs==20.3.0
-autopep8==1.5.4
+autopep8==1.5.5
 backoff==1.10.0
-boto3==1.16.51
-botocore==1.19.51
+boto3==1.17.11
+botocore==1.20.11
 certifi==2020.12.5
 chardet==4.0.0
-coverage==4.5.4
-Django==2.2.17
+coverage==5.4
+Django==2.2.18
 django-annoying==0.10.6
 django-markdown2==0.3.1
 et3==1.5.1
-Faker==5.0.1
 feedgen==0.9.0
-freezegun==1.0.0
+freezegun==1.1.0
 idna==2.10
-importlib-metadata==3.3.0
+importlib-metadata==3.4.0
+iniconfig==1.1.1
 isort==5.7.0
 jmespath==0.10.0
 kids.cache==0.0.7
 lazy-object-proxy==1.4.3
 lxml==4.6.2
-markdown2==2.3.10
+markdown2==2.4.0
 mccabe==0.6.1
-more-itertools==8.6.0
-newrelic==5.24.0.153
-packaging==20.8
+newrelic==6.0.1.155
+packaging==20.9
 pluggy==0.13.1
 psycopg2==2.8.6
 py==1.10.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
-pylint==2.6.0
-pylint-django==2.4.1
+pylint==2.6.2
+pylint-django==2.4.2
 pylint-plugin-utils==0.6
 pyparsing==2.4.7
-pytest==5.4.3
-pytest-cov==2.10.1
-pytest-django==3.10.0
+pytest==6.2.2
+pytest-cov==2.11.1
+pytest-django==4.1.0
 pytest-freezegun==0.4.2
 python-dateutil==2.8.1
 python-json-logger==0.1.11
 python-slugify==1.2.6
-pytz==2020.5
+pytz==2021.1
 requests==2.25.1
 requests-cache==0.4.13
 rfc3339==6.0
-s3transfer==0.3.3
+s3transfer==0.3.4
 six==1.15.0
 sqlparse==0.4.1
-text-unidecode==1.3
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
-Unidecode==1.1.2
-urllib3==1.26.2
+Unidecode==1.2.0
+urllib3==1.26.3
 uWSGI==2.0.19.1
-wcwidth==0.2.5
 wrapt==1.12.1
 zipp==3.4.0
