--- a/Pipfile
+++ b/Pipfile
@@ -24,7 +24,7 @@ requests = "~=2.20"
 requests-cache = "==0.4.13"
 rfc3339 = "==6.0"
 Django = "==2.2.*"
-uWSGI = "*"
+uWSGI = "~=2.0"
 
 [dev-packages]
 pyflakes = "~=2.0"
