--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,61 @@
-# file generated 2021-06-03 - see update-dependencies.sh
-astroid==2.5.6
+# file generated 2021-10-12 - see update-dependencies.sh
+astroid==2.8.2
 attrs==21.2.0
 autopep8==1.5.7
-backoff==1.10.0
-boto3==1.17.86
-botocore==1.20.86
-certifi==2021.5.30
-chardet==4.0.0
-coverage==5.5
+backoff==1.11.1
+boto3==1.18.59
+botocore==1.21.59
+certifi==2021.10.8
+charset-normalizer==2.0.7
+coverage==6.0.2
 Django==2.2.24
 django-annoying==0.10.6
 django-markdown2==0.3.1
 et3==1.5.1
 feedgen==0.9.0
 freezegun==1.1.0
-idna==2.10
-importlib-metadata==4.4.0
+idna==3.2
+importlib-metadata==4.8.1
 iniconfig==1.1.1
-isort==5.8.0
+isort==5.9.3
 jmespath==0.10.0
 kids.cache==0.0.7
 lazy-object-proxy==1.6.0
 lxml==4.6.3
-markdown2==2.4.0
+markdown2==2.4.1
 mccabe==0.6.1
-newrelic==6.4.0.157
-packaging==20.9
-pluggy==0.13.1
+newrelic==7.0.0.166
+packaging==21.0
+platformdirs==2.4.0
+pluggy==1.0.0
 psycopg2==2.8.6
 py==1.10.0
-pycodestyle==2.7.0
-pyflakes==2.3.1
-pylint==2.8.3
+pycodestyle==2.8.0
+pyflakes==2.4.0
+pylint==2.11.1
 pylint-django==2.4.4
 pylint-plugin-utils==0.6
 pyparsing==2.4.7
-pytest==6.2.4
-pytest-cov==2.12.1
-pytest-django==4.3.0
+pytest==6.2.5
+pytest-cov==3.0.0
+pytest-django==4.4.0
 pytest-freezegun==0.4.2
-python-dateutil==2.8.1
+python-dateutil==2.8.2
 python-json-logger==0.1.11
 python-slugify==1.2.6
-pytz==2021.1
-requests==2.25.1
+pytz==2021.3
+requests==2.26.0
 requests-cache==0.4.13
 rfc3339==6.0
-s3transfer==0.4.2
+s3transfer==0.5.0
 six==1.16.0
-sqlparse==0.4.1
+sqlparse==0.4.2
 toml==0.10.2
+tomli==1.2.1
 typed-ast==1.4.3
-typing-extensions==3.10.0.0
-Unidecode==1.2.0
-urllib3==1.26.5
-uWSGI==2.0.19.1
+typing-extensions==3.10.0.2
+Unidecode==1.3.2
+urllib3==1.26.7
+uWSGI==2.0.20
 wrapt==1.12.1
-zipp==3.4.1
+zipp==3.6.0
