--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-# file generated 2022-02-11 - see update-dependencies.sh
-astroid==2.9.3
+# file generated 2022-04-25 - see update-dependencies.sh
+astroid==2.11.3
 attrs==21.4.0
 autopep8==1.6.0
 backoff==1.11.1
-boto3==1.20.53
-botocore==1.23.53
+boto3==1.21.46
+botocore==1.24.46
 certifi==2021.10.8
-charset-normalizer==2.0.11
+charset-normalizer==2.0.12
 coverage==6.2
-Django==2.2.27
+dill==0.3.4
+Django==2.2.28
 django-annoying==0.10.6
 django-markdown2==0.3.1
-et3==1.5.1
+et3==1.5.2
 feedgen==0.9.0
-freezegun==1.1.0
+freezegun==1.2.1
 idna==3.3
 importlib-metadata==4.8.3
 iniconfig==1.1.1
@@ -21,10 +22,10 @@ isort==5.10.1
 jmespath==0.10.0
 kids.cache==0.0.7
 lazy-object-proxy==1.7.1
-lxml==4.7.1
+lxml==4.8.0
 markdown2==2.4.2
-mccabe==0.6.1
-newrelic==7.4.0.172
+mccabe==0.7.0
+newrelic==7.10.0.175
 packaging==21.3
 platformdirs==2.4.0
 pluggy==1.0.0
@@ -32,10 +33,10 @@ psycopg2==2.8.6
 py==1.11.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
-pylint==2.12.2
-pylint-django==2.5.0
+pylint==2.13.7
+pylint-django==2.5.3
 pylint-plugin-utils==0.7
-pyparsing==3.0.7
+pyparsing==3.0.8
 pytest==6.2.5
 pytest-cov==3.0.0
 pytest-django==4.5.2
@@ -43,19 +44,19 @@ pytest-freezegun==0.4.2
 python-dateutil==2.8.2
 python-json-logger==0.1.11
 python-slugify==1.2.6
-pytz==2021.3
+pytz==2022.1
 requests==2.27.1
 requests-cache==0.4.13
 rfc3339==6.0
-s3transfer==0.5.1
+s3transfer==0.5.2
 six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
 tomli==1.2.3
-typed-ast==1.5.2
-typing_extensions==4.0.1
-Unidecode==1.3.2
-urllib3==1.26.8
+typed-ast==1.5.3
+typing_extensions==4.1.1
+Unidecode==1.3.4
+urllib3==1.26.9
 uWSGI==2.0.20
-wrapt==1.13.3
+wrapt==1.14.0
 zipp==3.6.0
