--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-# file generated 2022-04-25 - see update-dependencies.sh
-astroid==2.11.3
+# file generated 2022-05-06 - see update-dependencies.sh
+asgiref==3.4.1
+astroid==2.11.4
 attrs==21.4.0
 autopep8==1.6.0
 backoff==1.11.1
-boto3==1.21.46
-botocore==1.24.46
+boto3==1.22.8
+botocore==1.25.8
 certifi==2021.10.8
 charset-normalizer==2.0.12
 coverage==6.2
 dill==0.3.4
-Django==2.2.28
+Django==3.2.13
 django-annoying==0.10.6
 django-markdown2==0.3.1
 et3==1.5.2
@@ -23,7 +24,7 @@ jmespath==0.10.0
 kids.cache==0.0.7
 lazy-object-proxy==1.7.1
 lxml==4.8.0
-markdown2==2.4.2
+markdown2==2.4.3
 mccabe==0.7.0
 newrelic==7.10.0.175
 packaging==21.3
@@ -33,7 +34,7 @@ psycopg2==2.8.6
 py==1.11.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
-pylint==2.13.7
+pylint==2.13.8
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
 pyparsing==3.0.8
@@ -58,5 +59,5 @@ typing_extensions==4.1.1
 Unidecode==1.3.4
 urllib3==1.26.9
 uWSGI==2.0.20
-wrapt==1.14.0
+wrapt==1.14.1
 zipp==3.6.0
