--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,42 @@
-# file generated 2022-05-06 - see update-dependencies.sh
-asgiref==3.4.1
-astroid==2.11.4
+# file generated 2022-07-13 - see update-dependencies.sh
+asgiref==3.5.2
+astroid==2.11.7
 attrs==21.4.0
 autopep8==1.6.0
 backoff==1.11.1
-boto3==1.22.8
-botocore==1.25.8
-certifi==2021.10.8
-charset-normalizer==2.0.12
-coverage==6.2
-dill==0.3.4
-Django==3.2.13
+boto3==1.24.28
+botocore==1.27.28
+certifi==2022.6.15
+charset-normalizer==2.1.0
+coverage==6.4.2
+dill==0.3.5.1
+Django==3.2.14
 django-annoying==0.10.6
 django-markdown2==0.3.1
 et3==1.5.2
 feedgen==0.9.0
 freezegun==1.2.1
 idna==3.3
-importlib-metadata==4.8.3
 iniconfig==1.1.1
 isort==5.10.1
-jmespath==0.10.0
+jmespath==1.0.1
 kids.cache==0.0.7
 lazy-object-proxy==1.7.1
-lxml==4.8.0
+lxml==4.9.1
 markdown2==2.4.3
 mccabe==0.7.0
-newrelic==7.10.0.175
+newrelic==7.14.0.177
 packaging==21.3
-platformdirs==2.4.0
+platformdirs==2.5.2
 pluggy==1.0.0
 psycopg2==2.8.6
 py==1.11.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
-pylint==2.13.8
+pylint==2.14.4
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
-pyparsing==3.0.8
+pyparsing==3.0.9
 pytest==6.2.5
 pytest-cov==3.0.0
 pytest-django==4.5.2
@@ -46,18 +45,17 @@ python-dateutil==2.8.2
 python-json-logger==0.1.11
 python-slugify==1.2.6
 pytz==2022.1
-requests==2.27.1
+requests==2.28.1
 requests-cache==0.4.13
 rfc3339==6.0
-s3transfer==0.5.2
+s3transfer==0.6.0
 six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
-tomli==1.2.3
-typed-ast==1.5.3
-typing_extensions==4.1.1
+tomli==2.0.1
+tomlkit==0.11.1
+typing_extensions==4.3.0
 Unidecode==1.3.4
-urllib3==1.26.9
+urllib3==1.26.10
 uWSGI==2.0.20
 wrapt==1.14.1
-zipp==3.6.0
