--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,7 @@ django-markdown2 = "~=0.3"
 et3 = "~=1.5"
 feedgen = "~=0.9"
 "kids.cache" = "==0.0.7"
-newrelic = "*"
+newrelic = "~=7.0"
 # psycopg2 doesn't use semver.
 # psycopg2 2.9.x isn't compatible with django 2.2:
 # https://github.com/psycopg/psycopg2/issues/1293
