--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-# file generated 2022-07-13 - see update-dependencies.sh
+# file generated 2022-08-16 - see update-dependencies.sh
 asgiref==3.5.2
 astroid==2.11.7
-attrs==21.4.0
-autopep8==1.6.0
+attrs==22.1.0
+autopep8==1.7.0
 backoff==1.11.1
-boto3==1.24.28
-botocore==1.27.28
+boto3==1.24.52
+botocore==1.27.52
 certifi==2022.6.15
 charset-normalizer==2.1.0
-coverage==6.4.2
+coverage==6.4.3
 dill==0.3.5.1
-Django==3.2.14
+Django==3.2.15
 django-annoying==0.10.6
 django-markdown2==0.3.1
 et3==1.5.2
 feedgen==0.9.0
-freezegun==1.2.1
+freezegun==1.2.2
 idna==3.3
 iniconfig==1.1.1
 isort==5.10.1
@@ -25,15 +25,16 @@ lazy-object-proxy==1.7.1
 lxml==4.9.1
 markdown2==2.4.3
 mccabe==0.7.0
-newrelic==7.14.0.177
+newrelic==7.16.0.178
 packaging==21.3
+pkg_resources==0.0.0
 platformdirs==2.5.2
 pluggy==1.0.0
 psycopg2==2.8.6
 py==1.11.0
-pycodestyle==2.8.0
-pyflakes==2.4.0
-pylint==2.14.4
+pycodestyle==2.9.1
+pyflakes==2.5.0
+pylint==2.14.5
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
 pyparsing==3.0.9
@@ -44,7 +45,7 @@ pytest-freezegun==0.4.2
 python-dateutil==2.8.2
 python-json-logger==0.1.11
 python-slugify==1.2.6
-pytz==2022.1
+pytz==2022.2.1
 requests==2.28.1
 requests-cache==0.4.13
 rfc3339==6.0
@@ -53,9 +54,9 @@ six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
 tomli==2.0.1
-tomlkit==0.11.1
+tomlkit==0.11.4
 typing_extensions==4.3.0
 Unidecode==1.3.4
-urllib3==1.26.10
+urllib3==1.26.11
 uWSGI==2.0.20
 wrapt==1.14.1
