--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,61 @@
-# file generated 2022-08-16 - see update-dependencies.sh
+# file generated 2022-10-31 - see update-dependencies.sh
 asgiref==3.5.2
-astroid==2.11.7
+astroid==2.12.12
 attrs==22.1.0
 autopep8==1.7.0
 backoff==1.11.1
-boto3==1.24.52
-botocore==1.27.52
-certifi==2022.6.15
-charset-normalizer==2.1.0
-coverage==6.4.3
-dill==0.3.5.1
-Django==3.2.15
+boto3==1.25.4
+botocore==1.28.4
+certifi==2022.9.24
+charset-normalizer==2.1.1
+coverage==6.5.0
+dill==0.3.6
+Django==3.2.16
 django-annoying==0.10.6
 django-markdown2==0.3.1
 et3==1.5.2
+exceptiongroup==1.0.0
 feedgen==0.9.0
 freezegun==1.2.2
-idna==3.3
+idna==3.4
 iniconfig==1.1.1
 isort==5.10.1
 jmespath==1.0.1
 kids.cache==0.0.7
-lazy-object-proxy==1.7.1
+lazy-object-proxy==1.8.0
 lxml==4.9.1
-markdown2==2.4.3
+markdown2==2.4.6
 mccabe==0.7.0
 newrelic==7.16.0.178
 packaging==21.3
-pkg_resources==0.0.0
 platformdirs==2.5.2
 pluggy==1.0.0
 psycopg2==2.8.6
-py==1.11.0
 pycodestyle==2.9.1
 pyflakes==2.5.0
-pylint==2.14.5
+pylint==2.15.5
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
 pyparsing==3.0.9
-pytest==6.2.5
-pytest-cov==3.0.0
+pytest==7.2.0
+pytest-cov==4.0.0
 pytest-django==4.5.2
 pytest-freezegun==0.4.2
 python-dateutil==2.8.2
 python-json-logger==0.1.11
 python-slugify==1.2.6
-pytz==2022.2.1
+pytz==2022.5
 requests==2.28.1
 requests-cache==0.4.13
 rfc3339==6.0
 s3transfer==0.6.0
 six==1.16.0
-sqlparse==0.4.2
+sqlparse==0.4.3
 toml==0.10.2
 tomli==2.0.1
-tomlkit==0.11.4
-typing_extensions==4.3.0
-Unidecode==1.3.4
-urllib3==1.26.11
-uWSGI==2.0.20
+tomlkit==0.11.6
+typing_extensions==4.4.0
+Unidecode==1.3.6
+urllib3==1.26.12
+uWSGI==2.0.21
 wrapt==1.14.1
