--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,6 @@ services:
     image: postgres:16
     env_file:
       - .env
-    environment:
-      POSTGRES_USER: postgres  # Added example_user to avoid 'root' issue
-      POSTGRES_DB: db_prod         # Added db_prod for consistency with healthcheck 
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d db_prod -U postgres"]
       interval: 10s
@@ -23,8 +20,6 @@ services:
         condition: service_healthy
       localstack:
         condition: service_healthy
-      # migrate:
-      #   condition: service_completed_successfully
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8000 || exit 1"]
       interval: 10s
@@ -35,8 +30,8 @@ services:
     ports:
     - 8000:8000
     volumes:
-    - ./schema/metrics:/app/schema/metrics
-    - ./schema/sql:/app/schema/sql
-    - ./src:/app/src
-    - ./app.cfg:/app/app.cfg
+    # - ./schema/metrics:/app/schema/metrics
+    # - ./schema/sql:/app/schema/sql
+    # - ./src:/app/src
+    # - ./app.cfg:/app/app.cfg
     - ./install.sh:/app/install.sh
